--- a/fitness287.html
+++ b/fitness287.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness Gym </title>
+    <title>Fitquest </title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,27 +88,72 @@
 
 
 <div class="billing-address">
-    <h2>Billing Address</h2>
-    <div class="form-group">
-      <label for="name">Full Name:</label>
-      <input type="text" id="name" name="name" placeholder="Enter your full name">
-    </div>
-    <div class="form-group">
-      <label for="address">Address:</label>
-      <input type="text" id="address" name="address" placeholder="Enter your address">
-    </div>
-    <div class="form-group">
-      <label for="city">City:</label>
-      <input type="text" id="city" name="city" placeholder="Enter your city">
-    </div>
-    <div class="form-group">
-      <label for="zipcode">Zip Code:</label>
-      <input type="text" id="zipcode" name="zipcode" placeholder="Enter your zip code">
-    </div>
-    <button type="submit">Submit</button>
+    <h3>Billing Address</h3>
+    <form id="billing-form">
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
+      </div>
+      <div>
+        <label for="name">First Name:</label>
+        <input type="text" id="name" required>
+      </div>
+      <div>
+        <label for="last-name">Last Name:</label>
+        <input type="text" id="last-name" required>
+      </div>
+      <div>
+        <label for="phone">Phone:</label>
+        <input type="tel" id="phone" required>
+      </div>
+      <div>
+        <label for="address">Address:</label>
+        <input type="text" id="address" required>
+      </div>
+      <div>
+        <label for="city">City:</label>
+        <input type="text" id="city" required>
+      </div>
+      <div>
+        <label for="postcode">Postcode:</label>
+        <input type="text" id="postcode" required>
+      </div>
+      <div>
+        <label for="order-comments">Order Comments:</label>
+        <textarea id="order-comments"></textarea>
+      </div>
+      <div>
+        <button type="button" id="buy-button">Buy</button>
+      </div>
+    </form>
   </div>
   
+  <div class="payment-details">
+    <h3>Payment Details</h3>
+    <form id="payment-form">
+      <div>
+        <label for="card-number">Card Number:</label>
+        <input type="text" id="card-number" required>
+      </div>
+      <div>
+        <label for="name-on-card">Name on Card:</label>
+        <input type="text" id="name-on-card" required>
+      </div>
+      <div>
+        <label for="expiration-date">Expiration Date:</label>
+        <input type="text" id="expiration-date" required>
+      </div>
+      <div>
+        <label for="security-code">Security Code:</label>
+        <input type="text" id="security-code" required>
+      </div>
+      <div>
+        <button type="button" id="buy-button">Buy</button>
+      </div>
+    </form>
   </div>
+  
+  
   
   
 
