--- a/menu/menuandexercises.html
+++ b/menu/menuandexercises.html
@@ -18,8 +18,8 @@
                 FITQUEST
             </div>
             <ul class="col d-flex" style="list-style-type: none; font-size: 20px; justify-content: flex-end;">
-                <li class="p-3"><a class="nav-link nav-active" href="/index.html"> Home</a></li>
-                <li class="p-3"><a class="nav-link" href="/menu/menuandexercises.html">Exercise & Diet</a></li>
+                <li class="p-3"><a class="nav-link" href="/index.html"> Home</a></li>
+                <li class="p-3"><a class="nav-link nav-active" href="/menu/menuandexercises.html">Exercise & Diet</a></li>
                 <li class="p-3"><a class="nav-link" href="/plans/plans.html">Plan</a></li>
             </ul>
             <hr>
