--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Meet our team</title>
-  <link rel="stylesheet" href="homestyle.css">>
+  
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Team</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Font+Name&display=swap">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="homestyle.css">>
+
 </head>
 <body>
     <header class="container">
@@ -23,12 +22,75 @@
             </div>
             <ul class="col d-flex" style="list-style-type: none; font-size: 20px; justify-content: flex-end;">
                 <li class="p-3"><a class="nav-link  nav-active" href="index.html"> Home</a></li>
-                <li class="p-3"><a class="nav-link" href="/menu/menuandexercises.html">Exercise & Diet</a></li>
-                <li class="p-3"><a class="nav-link" href="/plans/plans.html">Plan</a></li>
+                <li class="p-3"><a class="nav-link" href="menu/menuandexercises.html">Exercise & Diet</a></li>
+                <li class="p-3"><a class="nav-link" href="plans/plans.html">Plan</a></li>
             </ul>
             <hr>
         </div>  
     </header>
+
+
+    <container id="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000"
+            data-pause="hover">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h1> Customized Training Programs </h1>
+                    <p> We offer customized training programs tailored to the specific needs and goals of our users
+                    </p>
+                    <p> These programs are created by experienced fitness trainers and can be adjusted according to
+                        fitness level, preferences and limitations.</p>
+                </div>
+                <div class="carousel-item">
+                    <h1> Custom Meal Plans</h1>
+                    <p> : FitQuest offers customized meal plans tailored to your weight loss restrictions and goals
+                    </p>
+                    <p> Our certified nutritionists create a special menu to ensure the perfect fit for each user
+                    </p>
+                </div>
+                <div class="carousel-item">
+                    <h1> Convenient ordering </h1>
+                    <p>FitQuest makes the ordering process seamless and convenient for its users</p>
+                    <p>Our platform allows for easy online ordering of meal plans and training programs, eliminating
+                        the hassle of visiting physical locations or making phone calls</p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+        
+    </container>
+
+    <section id="features">
+        <div class="row">
+            <div class="feature-box col-lg-4">
+                <i class="fa-regular fa-medal fa-3x user"></i>
+                <h3> Customized Training Programs </h3>
+                <p> We offer customized training programs tailored to the specific needs and goals of our users </p>
+            </div>
+
+            <div class="feature-box col-lg-4">
+                <i class="fa-solid fa-drumstick-bite fa-3x user"></i>
+                <h3> Custom Meal Plans </h3>
+                <p> FitQuest offers customized meal plans tailored to your weight loss restrictions and goals                </p>
+            </div>
+
+            <div class="feature-box col-lg-4">
+                <i class="fa-solid fa-cart-shopping fa-3x user"></i>
+                <h3> Convenient ordering </h3>
+                <p> FitQuest makes the ordering process seamless and convenient for its users </p>
+            </div>
+        </div>
+    </section>
+
+
+
     <section id="about"> 
         <h1> Meet out team</h1>
 <div class="container">
