--- a/plans/plans.html
+++ b/plans/plans.html
@@ -25,7 +25,7 @@
         <hr>
     </div>  
 </header>
-  <div class="container">
+  <main class="container">
     <h1>Package Plans</h1>
     <div class="row">
       <div class="col-md-4">
@@ -34,7 +34,7 @@
             <h5 class="card-title">Only Diets</h5>
             <p class="card-text">There are only diets in this package</p>
             <p class="card-text">Price: $2.59/month</p>
-            <button class="btn btn-package">Buy Now</button>
+            <button class="btn btn-package buy-button" data-plan="Only Diets">Buy Now</button>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
             <h5 class="card-title">Only Exercises</h5>
             <p class="card-text">There are only exercises in this package</p>
             <p class="card-text">Price: $2.59/month</p>
-            <button class="btn btn-package">Buy Now</button>
+            <button class="btn btn-package buy-button" data-plan="Only Exercises">Buy Now</button>
           </div>
         </div>
       </div>
@@ -54,41 +54,53 @@
             <h5 class="card-title">Full Package</h5>
             <p class="card-text">Includes EVERYTHING!</p>
             <p class="card-text">Price: $4.95/month</p>
-            <button class="btn btn-package">Buy Now</button>
+            <button class="btn btn-package buy-button" data-plan="Full">Buy Now</button>
           </div>
         </div>
       </div>
     </div>
 
-    <h1>Personal Information</h1>
-    <form>
-      <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" required>
-      </div>
-      <div class="mb-3">
-        <label for="surname" class="form-label">Surname</label>
-        <input type="text" class="form-control" id="surname" required>
-      </div>
-      <div class="mb-3">
-        <label for="birthday" class="form-label">Birthday</label>
-        <input type="date" class="form-control" id="birthday" required>
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" required>
-      </div>
-      <div class="mb-3">
-        <label for="debit-card" class="form-label">Debit Card Number</label>
-        <input type="text" class="form-control" id="debit-card" required>
-      </div>
-      <div class="mb-3">
-        <label for="debit-card-date" class="form-label">Debit Card Expiration Date</label>
-        <input type="text" class="form-control" id="debit-card-date" required pattern="^(0[1-9]|1[0-2])\/[0-9]{2}$" placeholder="MM/YY">
-      </div>
-      <button type="submit" class="btn btn-orange">Check Out</button>
-    </form>
-  </div>
+    <div id="personal-section" class="personal-section">
+      <h1>Personal Information</h1>
+      <form>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="mb-3">
+          <label for="surname" class="form-label">Surname</label>
+          <input type="text" class="form-control" id="surname" required>
+        </div>
+        <div class="mb-3">
+          <label for="birthday" class="form-label">Birthday</label>
+          <input type="date" class="form-control" id="birthday" required>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" required>
+        </div>
+        <div class="form-group mb-3">
+          <label for="package-select">Choose a Package:</label>
+          <select class="form-control" id="package-select" name="package-select">
+            <option value="none">Select a Package</option>
+            <option value="Only Diets">Only Diets</option>
+            <option value="Only Exercises">Only Exercises</option>
+            <option value="Full">Full</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="debit-card" class="form-label">Debit Card Number</label>
+          <input type="text" class="form-control" id="debit-card" name="debit-card" required>
+        </div>
+        <div class="mb-3">
+          <label for="debit-card-date" class="form-label">Debit Card Expiration Date</label>
+          <input type="text" class="form-control" id="debit-card-date" required pattern="^(0[1-9]|1[0-2])\/[0-9]{2}$" placeholder="MM/YY">
+        </div>
+        <button type="submit" class="btn btn-orange">Check Out</button>
+      </form>
+    </div>
+    
+  </main>
 <br>
   <footer>
     <div class="container footer">
@@ -109,6 +121,8 @@
     </div>
 </footer>
 
+
+<div class="tooltip"></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
 </body>
