--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
             <ul class="col d-flex" style="list-style-type: none; font-size: 20px; justify-content: flex-end;">
                 <li class="p-3"><a class="nav-link  nav-active" href="index.html"> Home</a></li>
-                <li class="p-3"><a class="nav-link" href="menu/menuandexercises.html">Exercise & Diet</a></li>
-                <li class="p-3"><a class="nav-link" href="plans/plans.html">Plan</a></li>
+                <li class="p-3"><a class="nav-link" href="menuandexercises.html">Exercise & Diet</a></li>
+                <li class="p-3"><a class="nav-link" href="plans.html">Plan</a></li>
             </ul>
             <hr>
         </div>  
@@ -172,7 +172,7 @@
         </div>
     </div>
 </footer>
-<script  src="./script.js"></script>
+<script  src="script.js"></script>
 
 </body>
 </html>
