--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="carousel-item">
                     <h1> Custom Meal Plans</h1>
-                    <p> : FitQuest offers customized meal plans tailored to your weight loss restrictions and goals
+                    <p> FitQuest offers customized meal plans tailored to your weight loss restrictions and goals
                     </p>
                     <p> Our certified nutritionists create a special menu to ensure the perfect fit for each user
                     </p>
