--- a/plans/plans.html
+++ b/plans/plans.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Package Plans and Check Out</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="img/FitQuest.png">
   <link rel="stylesheet" href="/style.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap');
   </style>
 </head>
+
 <body>
   <header class="container">
     <div class="row">
-        <div class="col fs-4 fw-bold p-3" style="color: #FF8B13;">
-            FITQUEST
-        </div>
-        <ul class="col d-flex" style="list-style-type: none; font-size: 20px; justify-content: flex-end;">
-            <li class="p-3"><a class="nav-link" href="/index.html"> Home</a></li>
-            <li class="p-3"><a class="nav-link" href="/menu/menuandexercises.html">Exercise & Diet</a></li>
-            <li class="p-3"><a class="nav-link nav-active" href="/plans/plans.html">Plan</a></li>
-        </ul>
-        <hr>
-    </div>  
-</header>
+      <div class="col fs-4 fw-bold p-3" style="color: #FF8B13;">
+        FITQUEST
+      </div>
+      <ul class="col d-flex" style="list-style-type: none; font-size: 20px; justify-content: flex-end;">
+        <li class="p-3"><a class="nav-link" href="/index.html"> Home</a></li>
+        <li class="p-3"><a class="nav-link" href="/menu/menuandexercises.html">Exercise & Diet</a></li>
+        <li class="p-3"><a class="nav-link nav-active" href="/plans/plans.html">Plan</a></li>
+      </ul>
+      <hr>
+    </div>
+  </header>
   <div class="container">
     <h1>Package Plans</h1>
     <div class="row">
@@ -60,15 +63,15 @@
       </div>
     </div>
 
-    <h1>Personal Information</h1>
+    <h1 class="personal">Personal Information</h1>
     <form>
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" required>
+        <input type="text" onKeyUp="if(/[^a-zA-Zа-яА-ЯёЁ .]/i.test(this.value)){this.value='';}" class="form-control" id="name" required>
       </div>
       <div class="mb-3">
         <label for="surname" class="form-label">Surname</label>
-        <input type="text" class="form-control" id="surname" required>
+        <input type="text" onKeyUp="if(/[^a-zA-Zа-яА-ЯёЁ .]/i.test(this.value)){this.value='';}" class="form-control" id="surname" required>
       </div>
       <div class="mb-3">
         <label for="birthday" class="form-label">Birthday</label>
@@ -80,36 +83,38 @@
       </div>
       <div class="mb-3">
         <label for="debit-card" class="form-label">Debit Card Number</label>
-        <input type="text" class="form-control" id="debit-card" required>
+        <input type="text" class="form-control" id="debit-card" required oninput="this.value = this.value.replace(/[^0-9]/g, '')">
       </div>
       <div class="mb-3">
         <label for="debit-card-date" class="form-label">Debit Card Expiration Date</label>
-        <input type="text" class="form-control" id="debit-card-date" required pattern="^(0[1-9]|1[0-2])\/[0-9]{2}$" placeholder="MM/YY">
+        <input type="text" class="form-control" id="debit-card-date" required pattern="^(0[1-9]|1[0-2])\/[0-9]{2}$"
+          placeholder="MM/YY">
       </div>
       <button type="submit" class="btn btn-orange">Check Out</button>
     </form>
   </div>
-<br>
+  <br>
   <footer>
     <div class="container footer">
-        <div class="left-section">
-            <div class="website-name">FITQUEST</div>
-            <div class="email-prompt">subscribe for company updates below:</div>
-            <input type="email" class="email-input" placeholder="Your email">
-            <button class="email-button">Subscribe</button>
-        </div>
-        <div class="right-section">
+      <div class="left-section">
+        <div class="website-name">FITQUEST</div>
+        <div class="email-prompt">subscribe for company updates below:</div>
+        <input type="email" class="email-input" placeholder="Your email">
+        <button class="email-button">Subscribe</button>
+      </div>
+      <div class="right-section">
         <div class="contact-heading">Contact us:</div>
-            <ul class="contact-list">
-                <li>Github: <a href="https://github.com/Kantikkk/Final_WebDev">Kantikkk/Final_WebDev</a></li>
-                <li>Phone: +7 705 496 98 59</li>
-                <li>Email: fitquest@gmail.com</li>
-            </ul>
-        </div>
+        <ul class="contact-list">
+          <li>Github: <a href="https://github.com/Kantikkk/Final_WebDev">Kantikkk/Final_WebDev</a></li>
+          <li>Phone: +7 705 496 98 59</li>
+          <li>Email: fitquest@gmail.com</li>
+        </ul>
+      </div>
     </div>
-</footer>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
