--- a/plans/plans.html
+++ b/plans/plans.html
@@ -85,7 +85,7 @@
       </div>
       <div class="mb-3">
         <label for="debit-card" class="form-label">Debit Card Number</label>
-        <input type="text" class="form-control" id="debit-card" required
+        <input type="text" class="form-control" id="debit-card" required maxlength="16"
           oninput="this.value = this.value.replace(/[^0-9]/g, '')">
       </div>
       <div class="mb-3">
