fixed some bugs

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             <div class="music-box">
                 <button class="btn btn-link" id="music-toggle">
                     <i class="fas fa-music fa-3x music-icon"></i>
+                    <h3>(on/off)</h3>
                 </button>
-                <h3><strong> on/off </strong></h3>
+                
             </div>
         </div>
     </section>
@@ -113,6 +114,7 @@
     </section>
 
     <section id="bmi">
+        <h1>CALCULATE IT NOW!</h1>
         <div class="container">
             <div class="calculator">
                 <label class="height">Height: </label> <input type="text" placeholder="in cm" class="heightInput"> <br>
