a couple of changes

--- a/plans/plans.html
+++ b/plans/plans.html
@@ -37,7 +37,7 @@
             <h5 class="card-title">Only Diets</h5>
             <p class="card-text">There are only diets in this package</p>
             <p class="card-text">Price: $2.59/month</p>
-            <button class="btn btn-package">Buy Now</button>
+            <button class="btn btn-package" onclick="window.location.href='#personal'">Buy Now</button>
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
             <h5 class="card-title">Only Exercises</h5>
             <p class="card-text">There are only exercises in this package</p>
             <p class="card-text">Price: $2.59/month</p>
-            <button class="btn btn-package">Buy Now</button>
+            <button class="btn btn-package" onclick="window.location.href='#personal'">Buy Now</button>
           </div>
         </div>
       </div>
@@ -57,13 +57,13 @@
             <h5 class="card-title">Full Package</h5>
             <p class="card-text">Includes EVERYTHING!</p>
             <p class="card-text">Price: $4.95/month</p>
-            <button class="btn btn-package">Buy Now</button>
+            <button class="btn btn-package" onclick="window.location.href='#personal'">Buy Now</button>
           </div>
         </div>
       </div>
     </div>
 
-    <h1 class="personal">Personal Information</h1>
+    <h1 class="personal" id="personal">Personal Information</h1>
     <form>
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
