--- a/index.html
+++ b/index.html
@@ -94,21 +94,34 @@
     <section id="features">
         <div class="row">
             <div class="feature-box col-lg-4">
-                <i class="fas fa-dumbbell fa-3x icon"></i>
+                <i class="fas fa-dumbbell fa-3x iconn"></i>
                 <h3> Customized Training Programs </h3>
                 <p> We offer customized training programs tailored to the specific needs and goals of our users </p>
             </div>
 
             <div class="feature-box col-lg-4">
-                <i class="fas fa-utensils  fa-3x icon"></i>
+                <i class="fas fa-utensils  fa-3x iconn"></i>
                 <h3> Custom Meal Plans </h3>
                 <p> FitQuest offers customized meal plans tailored to your weight loss restrictions and goals </p>
             </div>
 
             <div class="feature-box col-lg-4">
-                <i class="fas fa-shopping-cart fa-3x icon"></i>
+                <i class="fas fa-shopping-cart fa-3x iconn"></i>
                 <h3> Convenient ordering </h3>
                 <p> FitQuest makes the ordering process seamless and convenient for its users </p>
+            </div>
+        </div>
+    </section>
+   
+    <section id="bmi">
+        <h1>CALCULATE IT NOW!</h1>
+        <div class="container">
+            <div class="calculator">
+                <label class="height">Height: </label> <input type="text" placeholder="in cm" class="heightInput"> <br>
+                <label class="weight">Weight: </label> <input type="text" placeholder="in kg" class="weightInput"> <br>
+                <button onclick="calculate()">Calculate your BMI </button><br>
+                <label class="BMI"> </label><span class="output"> </span>
+                <h2 class="overView"></h2>
             </div>
         </div>
     </section>
@@ -166,18 +179,6 @@
                 </div>
             </div>
             <hr>
-    </section>
-    <section id="bmi">
-        <h1>CALCULATE IT NOW!</h1>
-        <div class="container">
-            <div class="calculator">
-                <label class="height">Height: </label> <input type="text" placeholder="in cm" class="heightInput"> <br>
-                <label class="weight">Weight: </label> <input type="text" placeholder="in kg" class="weightInput"> <br>
-                <button onclick="calculate()">Calculate your BMI </button><br>
-                <label class="BMI"> </label><span class="output"> </span>
-                <h2 class="overView"></h2>
-            </div>
-        </div>
     </section>
 
     
