--- a/menuandexercises.html
+++ b/menuandexercises.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu and Exercises</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap');
       </style>
@@ -29,7 +29,6 @@
         <div style="font-size: 40px; text-align: center; font-weight: bold;">
             Your Exercises and Diet Plan
         </div>
-        
         <div class="container">
             <div class="box-section diet collapsed">
                 <div class="collapse-state no-select" style="font-size: larger; color: #CF4DCE;">Expand</div>
@@ -45,7 +44,7 @@
                     </div>
                 </div>
                 <div class="collapse-content">
-                <table class="table" >
+                <table class="table table-container" >
                     <thead>
                         <tr>
                             <th></th>
